[WIP] Deleted lake loader; replaced with engine. Engine requires some final additions

--- a/nbs/engine.ipynb
+++ b/nbs/engine.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "# Experiment Query Engine\n",
     "\n",
-    "> This class extends the `incense` project to allow you to load `sacred` experiments from a data lake store such as S3. It is assumed that there exists a ODBC SQL driver for this lake source.\n",
+    "> This class extends the `incense` base_key to allow you to load `sacred` experiments from a data lake store such as S3. It is assumed that there exists a ODBC SQL driver for this lake source.\n",
     "\n",
     "> NOTE: initially this class supports S3 & turbodbc only"
    ]
@@ -38,16 +38,23 @@
    "source": [
     "# export\n",
     "\n",
+    "import datetime\n",
     "import json\n",
     "import os\n",
-    "from functools import lru_cache\n",
+    "import tempfile\n",
+    "import uuid\n",
     "from typing import Tuple\n",
     "\n",
     "import boto3\n",
+    "import numpy as np\n",
+    "from pandas.io.sql import DatabaseError\n",
     "from tinydb import Query, TinyDB\n",
     "from tinydb.storages import MemoryStorage\n",
     "\n",
-    "from sciflow.experiment.lake_experiment import LakeExperiment\n",
+    "from sciflow.experiment.lake_experiment import (\n",
+    "    LakeExperiment,\n",
+    ")\n",
+    "from sciflow.experiment.tracking import FlowTracker, StepTracker\n",
     "from sciflow.utils import odbc_connect, prepare_env, query\n",
     "\n",
     "MAX_CACHE_SIZE = 32"
@@ -66,7 +73,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "project = \"sciflow-experiment-testing-20220609\""
+    "prepare_env()\n",
+    "_bucket_name = os.environ[\"SCIFLOW_BUCKET\"]"
    ]
   },
   {
@@ -75,7 +83,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prepare_env()"
+    "today = datetime.datetime.utcnow().strftime(\"%Y%m%d\")\n",
+    "_base_key = f\"sciflow-engine-testing-{today}\"\n",
+    "_run_id = f\"engine_{str(uuid.uuid4())[-6:]}\"\n",
+    "_s3_res = boto3.resource(\"s3\")\n",
+    "_s3_client = boto3.client(\"s3\")"
    ]
   },
   {
@@ -84,8 +96,63 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s3_res = boto3.resource(\"s3\")\n",
-    "# delete_dir(s3, os.environ[\"SCIFLOW_BUCKET\"], f\"sciflow/experiments/{experiment_name}\")"
+    "%matplotlib auto"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# experiment_data = create_experiment_test_data(_s3_res, _s3_client, _bucket_name, _base_key, _run_id)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Create Test Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "def create_test_flow_run(run_id):\n",
+    "    flow_tracker = FlowTracker(_bucket_name, _base_key, run_id, [\"engine-test-1\"])\n",
+    "    flow_tracker.start()\n",
+    "    tracker = StepTracker(_bucket_name, _base_key, run_id, \"engine-test-1\")\n",
+    "    with tracker.capture_out() as tracker._output_file:\n",
+    "        tracker.log_metric(\"recall\", 0.87, 0)\n",
+    "        df = pd.DataFrame({\"a\": [1, 2, 3], \"b\": [\"a\", \"b\", \"c\"]})\n",
+    "        with tempfile.TemporaryDirectory() as temp_dir:\n",
+    "            csv_path = f\"{temp_dir}/testfile.csv\"\n",
+    "            df.to_csv(csv_path)\n",
+    "            tracker.add_artifact(csv_path)\n",
+    "            fig = df.a.plot.hist().figure\n",
+    "            png_path = f\"{temp_dir}/testfile.png\"\n",
+    "            fig.savefig(png_path)\n",
+    "            tracker.add_artifact(png_path)\n",
+    "        tracker.completed()\n",
+    "    flow_tracker.completed()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_run_id_2 = f\"engine_{str(uuid.uuid4())[-6:]}\"\n",
+    "\n",
+    "create_test_flow_run(_run_id)\n",
+    "create_test_flow_run(_run_id_2)"
    ]
   },
   {
@@ -98,13 +165,13 @@
     "class ExperimentEngine:\n",
     "    def __init__(\n",
     "        self,\n",
-    "        project,\n",
-    "        experiments_key_prefix=None,\n",
+    "        base_key,\n",
+    "        experiments_key=None,\n",
     "        connection=None,\n",
     "        bucket_name=None,\n",
     "        bucket_table_alias=None,\n",
     "    ):\n",
-    "        self.project = '\"' + project + '\"'\n",
+    "        self.base_key = '\"' + base_key + '\"'\n",
     "        self.connection = odbc_connect() if connection is None else connection\n",
     "        self.bucket_name = (\n",
     "            os.environ[\"SCIFLOW_BUCKET\"] if bucket_name is None else bucket_name\n",
@@ -114,33 +181,24 @@
     "            if bucket_table_alias is None\n",
     "            else bucket_table_alias\n",
     "        )\n",
-    "        self.experiments_key_prefix = (\n",
-    "            f\"{project}/experiments\"\n",
-    "            if experiments_key_prefix is None\n",
-    "            else experiments_key_prefix\n",
+    "        self.experiments_key = (\n",
+    "            f\"{base_key}/experiments\" if experiments_key is None else experiments_key\n",
     "        )\n",
-    "        table_path = f\"{self.project}.experiments\"\n",
+    "        table_path = f\"{self.base_key}.experiments\"\n",
     "        self.table_context = f\"{self.bucket_table_alias}.{table_path}\"\n",
-    "        self.remote_path = f\"{self.bucket_name}/{self.experiments_key_prefix}\"\n",
+    "        self.remote_path = f\"{self.bucket_name}/{self.experiments_key}\"\n",
     "        self.lake_table = f\"{self.table_context}\"\n",
     "\n",
-    "        print(self.bucket_table_alias)\n",
-    "        print(self.experiments_key_prefix)\n",
-    "        print(table_path)\n",
-    "        print(self.table_context)\n",
-    "        print(self.remote_path)\n",
-    "        print(self.lake_table)\n",
-    "\n",
-    "    @lru_cache(maxsize=MAX_CACHE_SIZE)\n",
+    "    #    @lru_cache(maxsize=MAX_CACHE_SIZE)\n",
     "    def _find(\n",
     "        self,\n",
     "        experiment_ids=None,\n",
     "        experiment_id: str = None,\n",
+    "        experiment_name: str = None,\n",
     "        order_by: str = None,\n",
     "        limit: int = None,\n",
     "    ) -> LakeExperiment:\n",
     "        table_name = f\"{self.table_context}.runs\"\n",
-    "        print(\"_find\", table_name)\n",
     "        # TODO Dremio Specific code in utils.py\n",
     "        data = query(self.connection, f\"ALTER TABLE {table_name} REFRESH METADATA\")\n",
     "\n",
@@ -151,7 +209,10 @@
     "                f\" where dir0 IN {tuple('{}'.format(x) for x in experiment_ids)}\"\n",
     "            )\n",
     "        if experiment_id:\n",
-    "            query_stmt += f\" where dir0 = '{experiment_id}'\"\n",
+    "            query_stmt += f\" where dir0 = '{str(experiment_id)}'\"\n",
+    "        # TODO add find by name\n",
+    "        #         elif experiment_name:\n",
+    "        #             query_stmt += f\" where name = '{experiment_name}'\"\n",
     "        if order_by:\n",
     "            query_stmt += f\" order by {order_by} desc\"\n",
     "        if limit:\n",
@@ -160,40 +221,40 @@
     "        experiments = [\n",
     "            LakeExperiment(\n",
     "                self.bucket_name,\n",
-    "                self.experiments_key_prefix,\n",
-    "                experiment_name,\n",
+    "                self.experiments_key,\n",
     "                ex_id,\n",
     "                data.iloc[i, :].to_dict()[\"start_time\"],\n",
     "                data.iloc[i, :].to_dict(),\n",
+    "                experiment_name,\n",
     "            )\n",
     "            for i, ex_id in enumerate(data.dir0.tolist())\n",
-    "        ]\n",
+    "        ]  # bucket_name, base_key, experiment_id, start_time, data, name\n",
     "        return experiments\n",
     "\n",
-    "    @lru_cache(maxsize=MAX_CACHE_SIZE)\n",
+    "    #    @lru_cache(maxsize=MAX_CACHE_SIZE)\n",
     "    def find_by_id(self, experiment_id):\n",
-    "        experiments = self._find(experiment_id=experiment_id)\n",
+    "        experiments = self._find(experiment_id=str(experiment_id))\n",
     "        return None if len(experiments) == 0 else experiments[0]\n",
     "\n",
-    "    @lru_cache(maxsize=MAX_CACHE_SIZE)\n",
+    "    #    @lru_cache(maxsize=MAX_CACHE_SIZE)\n",
     "    def find_by_ids(self, experiment_ids: Tuple[str]):\n",
     "        if len(experiment_ids) == 1:\n",
     "            raise ValueError(\"Use find_by_id for a single experiment\")\n",
     "        return self._find(experiment_ids=experiment_ids)\n",
     "\n",
-    "    @lru_cache(maxsize=MAX_CACHE_SIZE)\n",
+    "    #    @lru_cache(maxsize=MAX_CACHE_SIZE)\n",
     "    def find_latest(self, n=5):\n",
     "        return self._find(order_by=\"start_time\", limit=n)\n",
     "\n",
-    "    @lru_cache(maxsize=MAX_CACHE_SIZE)\n",
+    "    #    @lru_cache(maxsize=MAX_CACHE_SIZE)\n",
     "    def find_all(self):\n",
     "        return self._find()\n",
     "\n",
-    "    @lru_cache(maxsize=MAX_CACHE_SIZE)\n",
-    "    def find_by_name(self, experiment_name):\n",
+    "    #    @lru_cache(maxsize=MAX_CACHE_SIZE)\n",
+    "    def find_by_name(self, name):\n",
     "        result = None\n",
     "        try:\n",
-    "            result = self._find(experiment_name=experiment_name)\n",
+    "            result = self._find(experiment_name=name)\n",
     "        except PermissionError:\n",
     "            print(f\"File not found or access not granted; check path information\")\n",
     "        return result\n",
@@ -231,7 +292,7 @@
     "\n",
     "    def __repr__(self):\n",
     "        return (\n",
-    "            f\"Project: {self.project}\\n\"\n",
+    "            f\"Base Key: {self.base_key}\\n\"\n",
     "            f\"Remote Path: {self.remote_path}\\n\"\n",
     "            f\"Lake Table: {self.lake_table}\"\n",
     "        )"
@@ -243,7 +304,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "engine = ExperimentEngine(project=project)"
+    "engine = ExperimentEngine(base_key=_base_key)"
    ]
   },
   {
@@ -252,7 +313,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "engine"
+    "assert engine.remote_path == f\"{os.environ['SCIFLOW_BUCKET']}/{_base_key}/experiments\"\n",
+    "assert (\n",
+    "    engine.lake_table\n",
+    "    == f\"{os.environ['SCIFLOW_BUCKET_TABLE_ALIAS']}.\\\"{_base_key}\\\".experiments\"\n",
+    ")"
    ]
   },
   {
@@ -261,7 +326,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# engine._find()"
+    "assert len(engine._find()) > 0"
    ]
   },
   {
@@ -270,14 +335,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# assert (\n",
-    "#     loader.remote_path\n",
-    "#     == f\"{os.environ['SCIFLOW_BUCKET']}/{project}/experiments/{experiment_name}\"\n",
-    "# )\n",
-    "# assert (\n",
-    "#     loader.lake_table\n",
-    "#     == f\"{os.environ['SCIFLOW_BUCKET_TABLE_ALIAS']}.{project}.experiments.{experiment_name}\"\n",
-    "# )"
+    "missing_loader = ExperimentEngine(\n",
+    "    _base_key, f\"generated_experiment_name_{np.random.randint(10**5)}\"\n",
+    ")"
    ]
   },
   {
@@ -286,9 +346,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# missing_loader = LakeExpLoader(\n",
-    "#     project, f\"generated_experiment_name_{np.random.randint(10**5)}\"\n",
-    "# )"
+    "missing_loader"
    ]
   },
   {
@@ -297,54 +355,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# missing_loader"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Create Test Data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Setup Experiments\n",
-    "# from sacred import Experiment\n",
-    "# from sacred.run import Run\n",
-    "\n",
-    "# from sciflow.experiment.lake_observer import AWSLakeObserver\n",
-    "\n",
-    "# ex = Experiment(experiment_name, interactive=True)\n",
-    "\n",
-    "# obs = AWSLakeObserver(\n",
-    "#     project, experiment_name=experiment_name, bucket_name=os.environ[\"SCIFLOW_BUCKET\"]\n",
-    "# )\n",
-    "\n",
-    "# ex.observers.append(obs)\n",
-    "\n",
-    "\n",
-    "# @ex.config\n",
-    "# def my_config():\n",
-    "#     recipient = \"test\"\n",
-    "#     message = f\"Hello {recipient}!\"\n",
-    "#     f\"{message}\"\n",
-    "\n",
-    "\n",
-    "# @ex.main\n",
-    "# def my_main(message, _run: Run):\n",
-    "#     _run.add_artifact(\"test/requirements-generated.txt\")\n",
-    "#     _run.add_artifact(\"test/dataframe_artifact.csv\")\n",
-    "#     _run.log_scalar(\"another one\", 9.12, 0)\n",
-    "#     print(message)\n",
-    "\n",
-    "\n",
-    "# sample_id_1 = str(uuid.uuid4()).replace(\"-\", \"_\")\n",
-    "# sample_id_2 = str(uuid.uuid4()).replace(\"-\", \"_\")"
+    "try:\n",
+    "    missing_loader.find_all()\n",
+    "    # TODO clean up error messaging\n",
+    "except DatabaseError:\n",
+    "    pass"
    ]
   },
   {
@@ -353,8 +368,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ex.run(meta_info={\"run_id\": sample_id_1})\n",
-    "# ex.run(meta_info={\"run_id\": sample_id_2})"
+    "assert engine.find_by_id(\"123\") is None\n",
+    "assert engine.find_by_id(123) is None"
    ]
   },
   {
@@ -363,11 +378,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# try:\n",
-    "#     missing_loader.find_all()\n",
-    "#     # TODO clean up error messaging\n",
-    "# except DatabaseError:\n",
-    "#     pass"
+    "assert engine.find_by_id(_run_id).experiment_id == _run_id"
    ]
   },
   {
@@ -376,21 +387,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# assert loader.find_by_id(1) is None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ex1 = loader.find_by_id(sample_id_1)\n",
+    "# ex1 = engine.find_by_id(_run_id)\n",
     "# assert len(ex1.metrics) == 1\n",
-    "# assert ex1.metrics[\"values\"].iloc[0] == 9.12\n",
-    "# assert type(ex1.metrics) == pd.DataFrame\n",
-    "# assert len(ex1.artifacts.values()) == 2\n",
-    "# assert all([type(art) == CSVArtifact for art in ex1.artifacts.values()])"
+    "# assert ex1.metrics[\"recall\"].iloc[0] == 0.87\n",
+    "# assert type(ex1.metrics) == dict\n",
+    "# assert len(ex1.artifacts.values()) == 4\n",
+    "# artifact_types = [type(t) for t in ex1.artifacts.values()]\n",
+    "# assert CSVArtifact in artifact_types\n",
+    "# assert ImageArtifact in artifact_types"
    ]
   },
   {
@@ -400,12 +404,12 @@
    "outputs": [],
    "source": [
     "# try:\n",
-    "#     ex_ids = (sample_id_1,)\n",
-    "#     exs = loader.find_by_ids(ex_ids)\n",
+    "#     ex_ids = (_run_id,)\n",
+    "#     exs = engine.find_by_ids(ex_ids)\n",
     "# except ValueError:\n",
     "#     pass\n",
-    "# ex_ids = (sample_id_1, sample_id_2)\n",
-    "# assert len(loader.find_by_ids(ex_ids)) == 2"
+    "# ex_ids = (_run_id, _run_id)\n",
+    "# assert len(engine.find_by_ids(ex_ids)) == 2"
    ]
   },
   {
