--- a/nbs/lake_experiment.ipynb
+++ b/nbs/lake_experiment.ipynb
@@ -10,13 +10,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# `incense` Experiment - adapted for Data Lakes"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -32,15 +25,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import datetime\n",
+    "import json\n",
+    "\n",
     "# export\n",
     "import os\n",
-    "from typing import Dict\n",
+    "import pickle\n",
+    "import tempfile\n",
+    "import uuid\n",
+    "import warnings\n",
+    "from copy import copy\n",
+    "from pathlib import Path\n",
+    "from typing import Dict, Set\n",
     "\n",
     "import boto3\n",
     "import pandas as pd\n",
+    "from IPython import display\n",
+    "from IPython.display import HTML, IFrame\n",
     "from pyrsistent import freeze, thaw\n",
     "\n",
-    "from sciflow.s3_utils import S3File, s3_join"
+    "from sciflow.s3_utils import S3File, load_json, put_data, s3_join\n",
+    "from sciflow.utils import prepare_env"
    ]
   },
   {
@@ -67,16 +72,6 @@
    "outputs": [],
    "source": [
     "# export\n",
-    "\n",
-    "import os\n",
-    "import pickle\n",
-    "import warnings\n",
-    "from copy import copy\n",
-    "from typing import Set\n",
-    "\n",
-    "import pandas as pd\n",
-    "from IPython import display\n",
-    "from IPython.display import HTML\n",
     "\n",
     "\n",
     "class Artifact:\n",
@@ -211,9 +206,8 @@
     "    can_render = {\"application/pdf\"}\n",
     "\n",
     "    # TODO probably needs jupyter extension to be able to display pdf.\n",
-    "    # def _render(self):\n",
-    "    #     return IFrame(self._make_filename(), width=600, height=300)\n",
-    "    #\n",
+    "    def _render(self):\n",
+    "        return IFrame(self._make_filename(), width=600, height=300)\n",
     "\n",
     "\n",
     "content_type_to_artifact_cls = {}\n",
@@ -230,26 +224,33 @@
    "outputs": [],
    "source": [
     "# export\n",
+    "\n",
+    "\n",
     "class LakeExperiment:\n",
     "    def __init__(\n",
-    "        self, bucket_name, experiments_dir, name, experiment_id, start_time, data\n",
+    "        self, bucket_name, base_key, experiment_id, start_time, data, name=None\n",
     "    ):\n",
     "        self.bucket_name = bucket_name\n",
-    "        self.experiments_dir = experiments_dir\n",
-    "        self.name = name\n",
+    "        self.base_key = base_key\n",
     "        self.experiment_id = experiment_id\n",
-    "        self.project_name = s3_join(experiments_dir, name)\n",
-    "        self.project_dir = s3_join(self.bucket_name, self.project_name)\n",
-    "        self.metrics_dir = s3_join(self.project_dir, \"metrics\", str(experiment_id))\n",
-    "        self.artifacts_dir = s3_join(self.project_dir, \"artifacts\", str(experiment_id))\n",
+    "        self.metrics_key = s3_join(self.base_key, \"metrics\", experiment_id)\n",
+    "        self.artifacts_key = s3_join(self.base_key, \"artifacts\", experiment_id)\n",
     "        self.start_time = start_time\n",
     "        self._data = freeze(data)\n",
-    "        self.s3 = boto3.client(\"s3\")\n",
+    "        # TODO is a name needed?\n",
+    "        # self.name = self.experiment_id if name is None else name\n",
+    "        self.name = name\n",
+    "        self.s3_res = boto3.resource(\"s3\")\n",
+    "        self.bucket = self.s3_res.Bucket(self.bucket_name)\n",
     "        self.artifacts = self._load_artifacts()\n",
     "        self.metrics = self._load_metrics()\n",
     "\n",
     "    def __repr__(self):\n",
-    "        return f\"{self.__class__.__name__}(id={self.experiment_id}, name={self.name})\"\n",
+    "        if self.name is None:\n",
+    "            text = f\"{self.__class__.__name__}(id={self.experiment_id}, start_time={datetime.datetime.fromtimestamp(round(self.start_time))})\"\n",
+    "        else:\n",
+    "            text = f\"{self.__class__.__name__}(id={self.experiment_id}, name={self.name} start_time={datetime.datetime.fromtimestamp(round(self.start_time))})\"\n",
+    "        return text\n",
     "\n",
     "    def __getattr__(self, item):\n",
     "        \"\"\"Try to relay attribute access to easy dict, to allow dotted access.\"\"\"\n",
@@ -260,18 +261,15 @@
     "\n",
     "    def _load_artifacts(self) -> Dict[str, Artifact]:\n",
     "        artifacts = {}\n",
-    "        s3 = boto3.resource(\"s3\")\n",
-    "        bucket = s3.Bucket(self.bucket_name)\n",
     "\n",
-    "        artifacts_key_prefix = s3_join(\n",
-    "            self.project_name, \"artifacts\", str(self.experiment_id)\n",
-    "        )\n",
     "        artifact_keys = [\n",
-    "            obj.key for obj in bucket.objects.filter(Prefix=artifacts_key_prefix)\n",
+    "            obj.key for obj in self.bucket.objects.filter(Prefix=self.artifacts_key)\n",
     "        ]\n",
     "\n",
     "        for artifact_key in artifact_keys:\n",
-    "            s3_object = s3.Object(bucket_name=self.bucket_name, key=artifact_key)\n",
+    "            s3_object = self.s3_res.Object(\n",
+    "                bucket_name=self.bucket_name, key=artifact_key\n",
+    "            )\n",
     "            artifact_file = S3File(s3_object)\n",
     "            name = os.path.basename(artifact_key)\n",
     "\n",
@@ -288,8 +286,17 @@
     "        return artifacts\n",
     "\n",
     "    def _load_metrics(self) -> Dict[str, pd.Series]:\n",
-    "        metrics_path = f\"s3://{self.metrics_dir}/metrics.csv\"\n",
-    "        return pd.read_csv(metrics_path)\n",
+    "        metrics = {}\n",
+    "        metric_keys = self.bucket.objects.filter(Prefix=self.metrics_key)\n",
+    "        for metric_key in metric_keys:\n",
+    "            metrics_entry = load_json(self.s3_res, self.bucket_name, metric_key.key)\n",
+    "            for metric_name in metrics_entry.keys():\n",
+    "                metrics[metric_name] = pd.Series(\n",
+    "                    data=metrics_entry[metric_name][\"values\"],\n",
+    "                    index=pd.Index(metrics_entry[metric_name][\"steps\"], name=\"step\"),\n",
+    "                    name=metric_name,\n",
+    "                )\n",
+    "        return metrics\n",
     "\n",
     "    def delete(self, confirmed: bool = False):\n",
     "        raise NotImplementedError\n",
@@ -302,6 +309,191 @@
     "\n",
     "    def _delete_artifacts(self):\n",
     "        raise NotImplementedError"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prepare_env()\n",
+    "_bucket_name = os.environ[\"SCIFLOW_BUCKET\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "today = datetime.datetime.utcnow().strftime(\"%Y%m%d\")\n",
+    "_base_key = f\"sciflow-experiment-testing-{today}\"\n",
+    "_run_id = f\"experiment_{str(uuid.uuid4())[-6:]}\"\n",
+    "_run_key = s3_join(_base_key, _run_id)\n",
+    "_metrics_key = f\"{_base_key}/experiments/metrics\"\n",
+    "_artifacts_key = f\"{_base_key}/experiments/artifacts\"\n",
+    "_runs_key = f\"{_base_key}/experiments/runs\"\n",
+    "_s3_res = boto3.resource(\"s3\")\n",
+    "_s3_client = boto3.client(\"s3\")\n",
+    "_bucket = _s3_res.Bucket(_bucket_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib auto"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Set-up - Create Test Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "\n",
+    "def create_experiment_test_data(\n",
+    "    s3_res, s3_client, bucket_name, base_key, experiment_id\n",
+    "):\n",
+    "    metrics_key = f\"{base_key}/experiments/metrics\"\n",
+    "    artifacts_key = f\"{base_key}/experiments/artifacts\"\n",
+    "    runs_key = f\"{base_key}/experiments/runs\"\n",
+    "\n",
+    "    df = pd.DataFrame({\"a\": [1, 2, 3], \"b\": [\"a\", \"b\", \"c\"]})\n",
+    "\n",
+    "    with tempfile.TemporaryDirectory() as temp_dir:\n",
+    "        csv_path = f\"{temp_dir}/testfile.csv\"\n",
+    "        df.to_csv(csv_path)\n",
+    "        fig = df.a.plot.hist().figure\n",
+    "        pdf_path = f\"{temp_dir}/testfile.pdf\"\n",
+    "        fig.savefig(pdf_path)\n",
+    "        pickle_path = f\"{temp_dir}/testfile.pkl\"\n",
+    "        df.to_pickle(pickle_path)\n",
+    "        for artifact_path in (csv_path, pdf_path, pickle_path):\n",
+    "            s3_client.upload_file(\n",
+    "                artifact_path,\n",
+    "                bucket_name,\n",
+    "                s3_join(artifacts_key, experiment_id, Path(artifact_path).name),\n",
+    "            )\n",
+    "\n",
+    "    metrics = {\n",
+    "        \"f1\": {\n",
+    "            \"steps\": [\n",
+    "                0,\n",
+    "                1,\n",
+    "            ],\n",
+    "            \"timestamps\": [\n",
+    "                \"2022-06-09T19:02:33.778171\",\n",
+    "                \"2022-06-09T19:02:34.014545\",\n",
+    "            ],\n",
+    "            \"values\": [0.37, 0.45],\n",
+    "        },\n",
+    "        \"precision\": {\n",
+    "            \"steps\": [\n",
+    "                0,\n",
+    "                1,\n",
+    "                2,\n",
+    "            ],\n",
+    "            \"timestamps\": [\n",
+    "                \"2022-06-09T19:02:33.778171\",\n",
+    "                \"2022-06-09T19:02:34.014545\",\n",
+    "                \"2022-06-09T19:02:34.014545\",\n",
+    "            ],\n",
+    "            \"values\": [0.37, 0.45, 0.89],\n",
+    "        },\n",
+    "    }\n",
+    "\n",
+    "    put_data(\n",
+    "        s3_res,\n",
+    "        bucket_name,\n",
+    "        s3_join(metrics_key, experiment_id, \"metrics.json\"),\n",
+    "        json.dumps(metrics),\n",
+    "    )\n",
+    "\n",
+    "    experiment_data = {\n",
+    "        \"meta\": \"{ }\",\n",
+    "        \"steps\": '[ \"experiment-test\" ]',\n",
+    "        \"start_time\": 1654801353.1519804,\n",
+    "        \"heartbeat\": None,\n",
+    "        \"status\": \"COMPLETED\",\n",
+    "        \"host\": '{\\n  \"ENV\" : { },\\n  \"cpu\" : \"777 CPU @ 9.99GHz\",\\n  \"hostname\" : \"sciflow\",\\n  \"os\" : [ \"Linux\", \"Linux-5.555-555\" ],\\n  \"python_version\" : \"3.9.0\"\\n}',\n",
+    "        \"dir0\": \"sample_flow_instance_3eadd8\",\n",
+    "        \"stop_time\": 1654801361.0863302,\n",
+    "        \"captured_out\": \"******BEGIN step: experiment-test******\\n******END step: experiment-test******\\n\",\n",
+    "        \"resources\": \"[ ]\",\n",
+    "        \"artifacts\": '[ \"testfile.csv\", \"testfile.pdf\", \"testfile.pkl\" ]',\n",
+    "        \"elapsed_time\": 7.93,\n",
+    "        \"info\": \"{ }\",\n",
+    "        \"all_hosts\": '{\\n  \"experiment-test\" : {\\n    \"ENV\" : { },\\n    \"cpu\" : \"777 CPU @ 9.99GHz\",\\n    \"hostname\" : \"sciflow\",\\n    \"os\" : [ \"Linux\", \"Linux-5.555-555\" ],\\n    \"python_version\" : \"3.9.0\"\\n  }\\n}',\n",
+    "        \"experiment\": \"{ }\",\n",
+    "        \"experiment_id\": \"sample_flow_instance_3eadd8\",\n",
+    "    }\n",
+    "\n",
+    "    put_data(\n",
+    "        s3_res,\n",
+    "        bucket_name,\n",
+    "        s3_join(runs_key, experiment_id, \"run.json\"),\n",
+    "        json.dumps(experiment_data),\n",
+    "    )\n",
+    "\n",
+    "    return experiment_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "experiment_data = create_experiment_test_data(\n",
+    "    _s3_res, _s3_client, _bucket_name, _base_key, _run_id\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "\n",
+    "experiment = LakeExperiment(\n",
+    "    _bucket_name, _base_key, _run_id, time.time(), experiment_data, name=\"quick-test\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "experiment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "experiment = LakeExperiment(\n",
+    "    _bucket_name, _base_key, _run_id, time.time(), experiment_data\n",
+    ")\n",
+    "experiment"
    ]
   }
  ],
