--- a/nbs/tracking.ipynb
+++ b/nbs/tracking.ipynb
@@ -69,7 +69,7 @@
    "outputs": [],
    "source": [
     "prepare_env()\n",
-    "bucket_name = os.environ[\"SCIFLOW_BUCKET\"]"
+    "_bucket_name = os.environ[\"SCIFLOW_BUCKET\"]"
    ]
   },
   {
@@ -79,13 +79,13 @@
    "outputs": [],
    "source": [
     "today = datetime.datetime.utcnow().strftime(\"%Y%m%d\")\n",
-    "flow_base_key = f\"sciflow-experiment-testing-{today}\"\n",
-    "flow_run_id = f\"sample_flow_instance_{str(uuid.uuid4())[-6:]}\"\n",
-    "flow_run_key = s3_join(flow_base_key, flow_run_id)\n",
-    "s3_res = boto3.resource(\"s3\")\n",
-    "steps = [\"experiment-test\"]\n",
-    "step_name = steps[0]\n",
-    "flow_base_key"
+    "_flow_base_key = f\"sciflow-experiment-testing-{today}\"\n",
+    "_flow_run_id = f\"sample_flow_instance_{str(uuid.uuid4())[-6:]}\"\n",
+    "_flow_run_key = s3_join(_flow_base_key, _flow_run_id)\n",
+    "_s3_res = boto3.resource(\"s3\")\n",
+    "_steps = [\"experiment-test\"]\n",
+    "_step_name = _steps[0]\n",
+    "_flow_base_key"
    ]
   },
   {
@@ -157,7 +157,7 @@
     "    def start(self, params=None):\n",
     "        host_info = get_host_info()\n",
     "        run_entry = {\n",
-    "            \"experiment_id\": flow_run_id,\n",
+    "            \"experiment_id\": self.flow_run_id,\n",
     "            \"experiment\": {},\n",
     "            \"format\": None,\n",
     "            \"command\": None,\n",
@@ -171,27 +171,35 @@
     "            \"captured_out\": \"\",\n",
     "            \"info\": {},\n",
     "            \"heartbeat\": None,\n",
-    "            \"steps\": steps,\n",
+    "            \"steps\": self.steps,\n",
     "        }\n",
     "\n",
-    "        save_json(s3_res, bucket_name, self.run_entry_key, \"run.json\", run_entry)\n",
     "        save_json(\n",
-    "            s3_res, bucket_name, self.run_entry_key, \"flow_start_run.json\", run_entry\n",
+    "            self.s3_res, self.bucket_name, self.run_entry_key, \"run.json\", run_entry\n",
     "        )\n",
-    "        save_json(s3_res, bucket_name, self.runs_table_key, \"run.json\", run_entry)\n",
-    "        print(f\"Started tracking flow: {flow_run_id}\")\n",
+    "        save_json(\n",
+    "            self.s3_res,\n",
+    "            self.bucket_name,\n",
+    "            self.run_entry_key,\n",
+    "            \"flow_start_run.json\",\n",
+    "            run_entry,\n",
+    "        )\n",
+    "        save_json(\n",
+    "            self.s3_res, self.bucket_name, self.runs_table_key, \"run.json\", run_entry\n",
+    "        )\n",
+    "        print(f\"Started tracking flow: {self.flow_run_id}\")\n",
     "\n",
     "    def interrupted(self):\n",
     "        self._tracking_event(\"INTERRUPTED\")\n",
-    "        print(f\"Flow tracking interrupted: {flow_run_id}\")\n",
+    "        print(f\"Flow tracking interrupted: {self.flow_run_id}\")\n",
     "\n",
     "    def failed(self, except_info):\n",
     "        self._tracking_event(\"FAILED\", except_info)\n",
-    "        print(f\"Flow tracking failed: {flow_run_id}\")\n",
+    "        print(f\"Flow tracking failed: {self.flow_run_id}\")\n",
     "\n",
     "    def completed(self):\n",
     "        self._tracking_event(\"COMPLETED\")\n",
-    "        print(f\"Flow tracking completed: {flow_run_id}\")\n",
+    "        print(f\"Flow tracking completed: {self.flow_run_id}\")\n",
     "\n",
     "    def _tracking_event(self, event_status, except_info=None):\n",
     "        run_entry = load_json(\n",
@@ -208,14 +216,18 @@
     "            )\n",
     "\n",
     "        run_entry = self._merge_step_entries(run_entry)\n",
-    "        save_json(s3_res, bucket_name, self.run_entry_key, \"run.json\", run_entry)\n",
-    "        save_json(s3_res, bucket_name, self.runs_table_key, \"run.json\", run_entry)\n",
+    "        save_json(\n",
+    "            self.s3_res, self.bucket_name, self.run_entry_key, \"run.json\", run_entry\n",
+    "        )\n",
+    "        save_json(\n",
+    "            self.s3_res, self.bucket_name, self.runs_table_key, \"run.json\", run_entry\n",
+    "        )\n",
     "\n",
     "    def _merge_step_entries(self, run_entry):\n",
     "        all_hosts = {}\n",
     "        captured_out = \"\"\n",
     "        step_entries = {}\n",
-    "        for step in steps:\n",
+    "        for step in self.steps:\n",
     "            step_entry = load_json(\n",
     "                self.s3_res,\n",
     "                self.bucket_name,\n",
@@ -231,7 +243,7 @@
     "            step_entries[step] = step_entry\n",
     "        run_entry[\"all_hosts\"] = all_hosts\n",
     "        run_entry[\"captured_out\"] = captured_out\n",
-    "        run_entry[\"steps\"] = steps\n",
+    "        run_entry[\"steps\"] = self.steps\n",
     "        run_entry[\"step_entries\"] = step_entries\n",
     "        return run_entry"
    ]
@@ -242,7 +254,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "flow_tracker = FlowTracker(bucket_name, flow_base_key, flow_run_id, steps)"
+    "flow_tracker = FlowTracker(_bucket_name, _flow_base_key, _flow_run_id, _steps)"
    ]
   },
   {
@@ -267,6 +279,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# export\n",
+    "\n",
+    "\n",
     "class SciflowTracker:\n",
     "    def log_metric(self, metric_name, metric_value, metric_step):\n",
     "        pass\n",
@@ -281,6 +296,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# export\n",
+    "\n",
+    "\n",
     "class TempFileTracker(SciflowTracker):\n",
     "    def __init__(metrics_path=None, artifacts_dir=None):\n",
     "        self.metrics_path = metrics_path\n",
@@ -301,6 +319,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# export\n",
+    "\n",
+    "\n",
     "class MockTracker(SciflowTracker):\n",
     "    def log_metric(self, metric_name, metric_value, metric_step):\n",
     "        pass\n",
@@ -344,13 +365,6 @@
     "        self.result = None\n",
     "        self.start_time = time.time()\n",
     "\n",
-    "        self.flow_start_run_entry = load_json(\n",
-    "            s3_res,\n",
-    "            bucket_name,\n",
-    "            s3_join(self.exp_base_key, \"runs\", \"flow_start_run.json\"),\n",
-    "        )\n",
-    "        self.run_entry = self.flow_start_run_entry\n",
-    "\n",
     "        if region is not None:\n",
     "            self.region = region\n",
     "            self.s3_res = boto3.resource(\"s3\", region_name=region)\n",
@@ -364,6 +378,13 @@
     "                    \"You must either pass in an AWS region name, or have a \"\n",
     "                    \"region name specified in your AWS config file\"\n",
     "                )\n",
+    "\n",
+    "        self.flow_start_run_entry = load_json(\n",
+    "            self.s3_res,\n",
+    "            bucket_name,\n",
+    "            s3_join(self.exp_base_key, \"runs\", \"flow_start_run.json\"),\n",
+    "        )\n",
+    "        self.run_entry = self.flow_start_run_entry\n",
     "\n",
     "        self.init_keys()\n",
     "\n",
@@ -386,6 +407,10 @@
     "        return capture_stdout()\n",
     "\n",
     "    def get_captured_out(self):\n",
+    "        if self._output_file is None:\n",
+    "            raise IOError(\n",
+    "                \"Attempting to get captured out when capturing has not been started. Remember to wrap tracked statements in 'with tracker.capture_out() as tracker._output_file:'\"\n",
+    "            )\n",
     "        if self._output_file.closed:\n",
     "            return\n",
     "        text = self._output_file.get()\n",
@@ -494,10 +519,10 @@
     "        self.resource_key = s3_join(self.exp_base_key, \"resources\")\n",
     "        self.source_key = s3_join(self.exp_base_key, \"sources\")\n",
     "        self.metrics_table_key = s3_join(\n",
-    "            self.flow_base_key, \"experiments\", \"metrics\", flow_run_id\n",
+    "            self.flow_base_key, \"experiments\", \"metrics\", self.flow_run_id\n",
     "        )\n",
     "        self.artifacts_table_key = s3_join(\n",
-    "            self.flow_base_key, \"experiments\", \"artifacts\", flow_run_id\n",
+    "            self.flow_base_key, \"experiments\", \"artifacts\", self.flow_run_id\n",
     "        )\n",
     "\n",
     "        self.keys = (\n",
@@ -515,7 +540,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tracker = StepTracker(bucket_name, flow_base_key, flow_run_id, steps[0])"
+    "tracker = StepTracker(_bucket_name, _flow_base_key, _flow_run_id, _steps[0])"
    ]
   },
   {
@@ -545,7 +570,7 @@
    "source": [
     "metrics_by_name = json.loads(\n",
     "    pd.read_json(\n",
-    "        f\"s3://{bucket_name}/{flow_base_key}/{flow_run_id}/experiment/metrics/metrics.json\"\n",
+    "        f\"s3://{_bucket_name}/{_flow_base_key}/{_flow_run_id}/experiment/metrics/metrics.json\"\n",
     "    ).to_json()\n",
     ")"
    ]
@@ -556,7 +581,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def metrics_to_df(metrics_by_name):\n",
+    "def metrics_to_df(metrics_by_name, flow_run_id):\n",
     "    metric_frames = []\n",
     "    for metric_name, metric_ptr in metrics_by_name.items():\n",
     "        metric_frame = pd.DataFrame(metric_ptr)\n",
@@ -573,7 +598,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "metrics = metrics_to_df(metrics_by_name)\n",
+    "metrics = metrics_to_df(metrics_by_name, _flow_run_id)\n",
     "assert metrics[\"steps\"].tolist() == [0, 1, 2, 3]\n",
     "assert metrics[\"values\"].tolist() == [0.37, 0.45, 0.63, 0.89]\n",
     "assert metrics[\"metric\"].tolist() == [\"auc\", \"auc\", \"auc\", \"auc\"]"
@@ -585,7 +610,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "contents = list_bucket(bucket_name, flow_run_key)\n",
+    "contents = list_bucket(_bucket_name, _flow_run_key)\n",
     "assert len(contents) >= 1\n",
     "assert (\n",
     "    len(\n",
@@ -604,6 +629,20 @@
    "metadata": {},
    "source": [
     "# Out Capture"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raised = False\n",
+    "try:\n",
+    "    tracker.get_captured_out()\n",
+    "except IOError:\n",
+    "    raised = True\n",
+    "assert raised"
    ]
   },
   {
@@ -719,9 +758,9 @@
    "outputs": [],
    "source": [
     "step_entry_key = s3_join(\n",
-    "    flow_base_key, flow_run_id, \"experiment\", \"runs\", f\"step_{step_name}.json\"\n",
+    "    _flow_base_key, _flow_run_id, \"experiment\", \"runs\", f\"step_{_step_name}.json\"\n",
     ")\n",
-    "step_entry = load_json(s3_res, bucket_name, step_entry_key)\n",
+    "step_entry = load_json(_s3_res, _bucket_name, step_entry_key)\n",
     "assert step_entry[\"status\"] == \"RUNNING\""
    ]
   },
@@ -741,9 +780,9 @@
    "outputs": [],
    "source": [
     "step_entry_key = s3_join(\n",
-    "    flow_base_key, flow_run_id, \"experiment\", \"runs\", f\"step_{step_name}.json\"\n",
+    "    _flow_base_key, _flow_run_id, \"experiment\", \"runs\", f\"step_{_step_name}.json\"\n",
     ")\n",
-    "step_entry = load_json(s3_res, bucket_name, step_entry_key)\n",
+    "step_entry = load_json(_s3_res, _bucket_name, step_entry_key)\n",
     "assert step_entry[\"status\"] == \"COMPLETED\""
    ]
   },
@@ -762,8 +801,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run_entry_key = s3_join(flow_base_key, flow_run_id, \"experiment\", \"runs\", \"run.json\")\n",
-    "run_entry = load_json(s3_res, bucket_name, run_entry_key)\n",
+    "run_entry_key = s3_join(_flow_base_key, _flow_run_id, \"experiment\", \"runs\", \"run.json\")\n",
+    "run_entry = load_json(_s3_res, _bucket_name, run_entry_key)\n",
     "assert run_entry[\"status\"] == \"COMPLETED\""
    ]
   },
@@ -903,8 +942,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "flow_run_id = f\"sample_flow_instance_{str(uuid.uuid4())[-6:]}\"\n",
-    "flow_run_key = s3_join(flow_base_key, flow_run_id)"
+    "_flow_run_id = f\"sample_flow_instance_{str(uuid.uuid4())[-6:]}\"\n",
+    "_flow_run_key = s3_join(_flow_base_key, _flow_run_id)\n",
+    "_steps = [\"first_step\", \"second_step\"]"
    ]
   },
   {
@@ -915,13 +955,13 @@
    "source": [
     "# slow\n",
     "\n",
-    "flow_tracker = FlowTracker(bucket_name, flow_base_key, flow_run_id, steps)\n",
+    "flow_tracker = FlowTracker(_bucket_name, _flow_base_key, _flow_run_id, _steps)\n",
     "\n",
     "try:\n",
     "    flow_tracker.start()\n",
     "\n",
     "    try:\n",
-    "        tracker = StepTracker(bucket_name, flow_base_key, flow_run_id, \"first_step\")\n",
+    "        tracker = StepTracker(_bucket_name, _flow_base_key, _flow_run_id, \"first_step\")\n",
     "        with tempfile.TemporaryDirectory() as temp_dir:\n",
     "            with tracker.capture_out() as tracker._output_file:\n",
     "                tracker.start_heartbeat(1.0)\n",
@@ -933,7 +973,7 @@
     "        tracker.completed(status=\"FAILED\", except_info=except_info)\n",
     "\n",
     "    try:\n",
-    "        tracker = StepTracker(bucket_name, flow_base_key, flow_run_id, \"second_step\")\n",
+    "        tracker = StepTracker(_bucket_name, _flow_base_key, _flow_run_id, \"second_step\")\n",
     "        with tempfile.TemporaryDirectory() as temp_dir:\n",
     "            with tracker.capture_out() as tracker._output_file:\n",
     "                tracker.start_heartbeat(1.0)\n",
@@ -947,7 +987,7 @@
     "    flow_tracker.completed()\n",
     "except (KeyboardInterrupt):\n",
     "    flow_tracker.interrupted()\n",
-    "    print(f\"Flow interrupted by user: {flow_run_id}\")\n",
+    "    print(f\"Flow interrupted by user: {_flow_run_id}\")\n",
     "except BaseException:\n",
     "    exc_type, exc_value, trace = sys.exc_info()\n",
     "    except_info = {\"exc_type\": exc_type, \"exc_value\": exc_value, \"trace\": trace}\n",
@@ -965,13 +1005,13 @@
    "source": [
     "# slow\n",
     "\n",
-    "run_entry_key = s3_join(flow_base_key, flow_run_id, \"experiment\", \"runs\")\n",
-    "run_entry = load_json(s3_res, bucket_name, s3_join(run_entry_key, \"run.json\"))\n",
+    "run_entry_key = s3_join(_flow_base_key, _flow_run_id, \"experiment\", \"runs\")\n",
+    "run_entry = load_json(_s3_res, _bucket_name, s3_join(run_entry_key, \"run.json\"))\n",
     "first_step_entry = load_json(\n",
-    "    s3_res, bucket_name, s3_join(run_entry_key, \"step_first_step.json\")\n",
+    "    _s3_res, _bucket_name, s3_join(run_entry_key, \"step_first_step.json\")\n",
     ")\n",
     "second_step_entry = load_json(\n",
-    "    s3_res, bucket_name, s3_join(run_entry_key, \"step_second_step.json\")\n",
+    "    _s3_res, _bucket_name, s3_join(run_entry_key, \"step_second_step.json\")\n",
     ")"
    ]
   },
@@ -982,8 +1022,7 @@
    "outputs": [],
    "source": [
     "# slow\n",
-    "\n",
-    "# delete_dir(s3_res, bucket_name, flow_base_key)"
+    "# delete_dir(_s3_res, _bucket_name, _flow_base_key)"
    ]
   }
  ],
